feat: 优化配方创建器/编辑器UI，完善编辑器功能
UI优化:
- 更新所有创建器YAML配置，添加lore操作指引，frame改为cyan材质
- Anvil创建器布局优化为5行，移除无用result_frame_icon
- 所有编辑器添加返回按钮(back_icon)
- 编辑器保存配方后显示成功提示
- 合成/熔炼编辑器添加配方书分类(category)切换按钮
- ShapelessEditor布局修复为与Shaped一致的3x3网格
- RecipeBookCategoryIcon添加setCategory方法

语言文件:
- 修复command.create.success中配方/Recipe等词重复问题(10个语言文件)
- 新增command.edit.success编辑成功提示(10个语言文件)